# SeniorDesignSp26Su26

./: .gitignore  .gitmodules  README.md  pyproject.toml
Electrical Schematics/LM2576_Var_Volt_Reg/: LM2576_Var_Volt_Reg.kicad_pcb  LM2576_Var_Volt_Reg.kicad_prl  LM2576_Var_Volt_Reg.kicad_pro  LM2576_Var_Volt_Reg.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Electrical Schematics/LM2679PiRegulator/: LM2679PiRegulator.kicad_prl  LM2679PiRegulator.kicad_pro  LM2679PiRegulator.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/: Peer board notes.txt  Rule of thumb adjustments.txt  regulator diode notes.txt  schematics and layout questions.txt
Hardware/Folder of holdin/TMC2160-EVAL-OrCAD/: TMC2160-EVAL.DSN
Hardware/KiCAD files/: README.txt
Hardware/KiCAD files/LM2576_Var_Volt_Reg/: LM2576_Var_Volt_Reg.csv  LM2576_Var_Volt_Reg.kicad_pcb  LM2576_Var_Volt_Reg.kicad_prl  LM2576_Var_Volt_Reg.kicad_pro  LM2576_Var_Volt_Reg.kicad_sch  LM2576_Var_Volt_Reg_12V.kicad_sch  fp-info-cache  (+4 more)
Software/FirmwareSoftware/: config.txt  readme.md
Software/SlicerSoftware/: notesToSelf.md  pyproject.toml  readme.md  requirements.txt
Software/SlicerSoftware/TestFiles/: gscribTest.py  jsonTest.py  pygerberTest.py  test.json
Software/SlicerSoftware/libraryTestFiles/: TkinterTest.py  grid_holes.gcode  output.gcode  pygerberTest.py
Software/SlicerSoftware/src/: GUI.py  config.json  configFunctions.py  inkGUI.py  main.py  slicerSoftware.py
Website/: README.md  homepage.html  index.html  materials.html  script.js  sd1.html  sd2.html  styles.css  team.html
(+497 files in other folders)
