[project]
name = "seniordesignsp26su26"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Baker",email = "45822001+ReadHeadRedemption@users.noreply.github.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "gscrib (>=1.2.0,<2.0.0)",
    "pygerber (>=2.4.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
